i've optimized all code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=demo
 server.port=9090
 
 # Configuraciacin de la base de datos MariaDB
-spring.datasource.url=jdbc:mariadb://localhost:3306/test?serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/eam_test?serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=dvdm12
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
